# openxr-app

./: Cargo.toml  README.md  frag.spv
resources/shaders/: fullscreen.vert.spv
src/: main.rs
src/IO/: ShaderCompiler.rs  mod.rs
src/Log/: mod.rs
src/Platform/Vulkan/: Context.rs  GraphicsDevice.rs  GraphicsPipeline.rs  SwapChain.rs  VulkanContext.rs  mod.rs
src/io/: mod.rs  shader_compiler.rs
src/log/: mod.rs
src/platform/: mod.rs
src/platform/openxr/: action_set.rs  context.rs  device_emulation.rs  mod.rs  session.rs
src/platform/vulkan/: context.rs  graphics_pipeline.rs  mod.rs  shader.rs  swapchain.rs
src/renderer/: mod.rs  renderer.rs
