[package]
name = "neon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
winit = "0.28"
ash =  { version = "0.38.0", features = ["linked"] }
ash-window = "0.13"
raw-window-handle = "0.6"
openxr = {version = "0.19.0", features = ["static"] }
ctrlc = "3.4"

[features]
default = []
build_debug = []