[package]
name = "neon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
winit = "0.28"
ash =  { version = "0.38.0", features = ["linked"] }
ash-window = "0.13"
raw-window-handle = "0.6"
ctrlc = "3.4"
vk-mem = "0.4.0"

# 'static' if windows: 
# [target.'cfg(windows)'.dependencies]
openxr = { version = "0.19.0", features = ["static"] }

# 'linked' if linux:
# [target.'cfg(unix)'.dependencies]
# openxr = { version = "0.19.0", features = ["linked"] }


[features]
default = []
build_debug = []

