[package]
name = "neon"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"

mlog = { git = "https://gitlab.com/ma1a/mlog.git" }
# mlog = {path = "../mlog"}

winit = "0.28"
ash =  { version = "0.38.0", features = ["linked"] }
ash-window = "0.13"
raw-window-handle = "0.6"
ctrlc = "3.4"
vk-mem = "0.4.0"

[target.'cfg(windows)'.dependencies]
openxr = { version = "0.19.0", features = ["static"] }

[target.'cfg(unix)'.dependencies]
openxr = { version = "0.19.0", features = ["linked"] }


[features]
default = []
build_debug = []

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
rpath = false
debug = 0
overflow-checks = false
panic = "abort"

[build]
rustflags = ["-C", "target-cpu=native"]